2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::rspQuery): Report support for
	qXfer:threads:read.
	(GdbServer::rspThreadExtraInfo): New method.
	(GdbServer::rspMakeTransferThreadsReply): New method.
	(GdbServer::rspTransfer): Handle "threads" objects.
	* src/GdbServer.h (GdbServer) <qXferThreadsReply>: New field.
	<rspThreadExtraInfo>: Declare.

2016-06-22  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::rspTransferObject): New method.
	(GdbServer::rspTransfer): Use rspTransferObject.
	(GdbServer::rspOsData): Delete.  Factor out the part that actualy
	builds the reply to ...
	(GdbServer::rspMakeOsDataReply): ... this new method.
	(GdbServer::rspOsDataProcesses): Delete.  Factor out the part that
	actualy builds the reply to ...
	(GdbServer::rspMakeOsDataProcessesReply): ... this new method.
	(GdbServer::rspOsDataLoad): Delete.  Factor out the part that
	actualy builds the reply to ...
	(GdbServer::rspMakeOsDataLoadReply): ... this new method.
	(GdbServer::rspOsDataTraffic): Delete.  Factor out the part that
	actualy builds the reply to ...
	(GdbServer::rspMakeOsDataTrafficReply): ... this new method.
	* src/GdbServer.h (GdbServer) <rspOsData, rspOsDataProcesses,
	rspOsDataLoad, rspOsDataTraffic>: New methods.
	<makeTransferReplyFtype>: New typedef.
	<rspTransferObject, rspMakeOsDataReply,
	rspMakeOsDataProcessesReply, rspMakeOsDataLoadReply,
	rspMakeOsDataTrafficReply>: New methods.

2016-06-22  Pedro Alves  <pedro@palves.net>
	    Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::GdbServer): Initialize
	mNotifyingP.
	(GdbServer::rspServer): Alway start out as all-stop mode.  Don't
	attach here.  If non-stop mode, process thread stops and send as
	notifications.
	(GdbServer::haltAndActivateProcess): New method, factored out
	from ...
	(GdbServer::rspAttach): ... this.
	(GdbServer::rspStatus): New method.
	(GdbServer::rspClientRequest): Bail out if in non-stop mode, and